# RvtkStatismo

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  INSTALL.md  NAMESPACE  README.md  cleanup  configure  configure.ac  configure.win
R/: AAAllClass.r  AllClass.r  AllGeneric.r  ConstrainedModel.r  ConstrainedModelPointer.r  GetFullJacobian.r  ModelMembers.r  ModelMembersPointer.r  PredictSample.r  PredictSamplePointer.r  ReducedVarianceModel.r  Rvtk-package.R  RvtkStatismo-package.R  alignment.r  competingPoints.r  fiducials.r  kernels.r  meshintegrity.r  pPCA.r  pPCA2ConstrainedModel.r  pPCA_pointer.r  pPCAhelper.r  removePointsFromModel.r  restoreSamples.r  setPPCA.r  statismo.r  statismoBuildConditionalModel.r  statismoBuildModel.r  statismoGaussProcess.r  statismoHelper.r  statismoIO.r  statismoModelFromRepresenter.r  vtkBooleanOp.r  vtkExtractOutsideMesh.r  vtkGeodesicPath.r  vtkICP.r  vtkImageBlend.r  vtkMesh2Image.r  vtkMeshVolume.r  vtkSegment2PolyData.r  (+5 more)
debian/: changelog  control
debian/source/: options
inst/extdata/: mandibles.h5
inst/include/: #R2polyData.h#  BuildConditionalModel.h  BuildGaussProcessModel.h  BuildModel.h  ConditionalModelBuilderCustom.h  ConditionalModelBuilderCustom.hxx  ConstrainedModel.h  DataManagerWithSurrogateVector.h  DataManagerWithSurrogateVector.hxx  Helpers.h  ModelMembers.h  R2polyData.h  R2vtkPoints.h  ReducedModel.h  SetScale.h  VTKTypes.h  competingPoints.h  pPCA2statismo.h  polyData2R.h  statismoReducedModel.h  vtkDicom2Nifti.h  vtkImageIO.h  vtkImageTransform.h  vtkPolyData2ImageData.h  vtkPolyData2vtkImageData.h  vtkPolyToImageData.h  vtkpoly2unstruct.h
man/: BSplineKernel.Rd  BsplineKernel-class.Rd  CombineKernels.Rd  ComputeConstrainedModel.Rd  GaussianKernel.Rd  GetFullJacobian.Rd  GetMahalanobisForPointSets.Rd  IsoKernel.Rd  MatrixValuedKernel.Rd  MultiscaleBSplineKernel.Rd  MultiscaleBsplineKernel.Rd  PredictSample.Rd  ProductKernels.Rd  Rvtk-package.Rd  RvtkStatismo-deprecated.Rd  RvtkStatismo-package.Rd  StatismoMatrices.Rd  StatismoSample.Rd  StatisticalModelKernel.Rd  SumKernels.Rd  align2domain.Rd  competingPoints.Rd  getCoordVar.Rd  getDataLikelihood.Rd  kernel-classes.Rd  manageConditioningData.Rd  mesh2vtp.Rd  meshalign.Rd  meshlist2array.Rd  modelinfo-class.Rd  pPCA-class.Rd  pPCA.Rd  pPCA_pointer-class.Rd  pointer2pPCA.Rd  ppcasetters.Rd  predictpPCA.Rd  read.fcsv.Rd  read.vtk.Rd  removePointsFromModel.Rd  representer2sample.Rd  (+31 more)
src/: BuildConditionalModel.cpp  BuildGaussProcessModel.cpp  BuildGaussProcessModel.h  BuildModel.cpp  CMakeLists.txt  ConstrainedModel.cpp  Helpers.cpp  Makevars  Makevars.in  ModelMembers.cpp  R2polyData.cpp  R2vtk.cpp  R2vtk.h  R2vtkPoints.cpp  ReducedModel.cpp  Rkernels.cpp  RvtkStatismo_init.c  SaveModel.cpp  SetScale.cpp  VTKTypes.h  competingPoints.cpp  config.h.in  getFullJacobian.cpp  getenv  pPCA2statismo.cpp  pPCA2statismo.h  pPCA_pointer.cpp  polyData2R.cpp  readVTP.cpp  statismoReducedModel.cpp  testpoly.cpp  testpolyData.cpp  upOBJ.sh  vtkBooleanOp.cpp  vtkDicom2Nifti.cpp  vtkExtractOutsideMesh.cpp  vtkGeodesicPath.cpp  vtkICP.cpp  vtkImageBlend.cpp  vtkImageIO.cpp  (+12 more)
src/m4/: vtk.m4
tests/: testthat.R
tests/testthat/: test-ppCA-sbuildmodel.r
